# scooby

./: .gitignore  Cargo.toml  README.md
src/: cfg.rs  cli.rs  db.rs  formatting.rs  http.rs  main.rs  ui.rs
