[package]
name = "scooby"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.53", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.145"
colored = "3.0.0"
turso = "0.3.2"
chrono = "0.4.42"
colored_json = "5.0.0"
